--- a/RDOS/RDOS.csproj
+++ b/RDOS/RDOS.csproj
@@ -27,7 +27,7 @@
         <ISO_Description>Creates a bootable ISO image which can be burned to a DVD. After running the selected project, an explorer window will open containing the ISO file. The ISO file can then be burned to a CD or DVD and used to boot a physical or virtual system.</ISO_Description>
         <ISO_Deployment>ISO</ISO_Deployment>
         <ISO_Launch>None</ISO_Launch>
-        <ISO_DebugEnabled>True</ISO_DebugEnabled>
+        <ISO_DebugEnabled>False</ISO_DebugEnabled>
         <ISO_DebugMode>Source</ISO_DebugMode>
         <ISO_IgnoreDebugStubAttribute>False</ISO_IgnoreDebugStubAttribute>
         <ISO_CosmosDebugPort>Serial: COM1</ISO_CosmosDebugPort>
@@ -63,6 +63,7 @@
         <USB_StartCosmosGDB>False</USB_StartCosmosGDB>
         <VMwareEdition>Workstation</VMwareEdition>
         <VMware_VMwareEdition>Workstation</VMware_VMwareEdition>
+        <ISO_VMwareEdition>Workstation</ISO_VMwareEdition>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -70,9 +71,9 @@
         <StartCosmosGDB>False</StartCosmosGDB>
         <VisualStudioDebugPort>Pipe: Cosmos\Serial</VisualStudioDebugPort>
         <CosmosDebugPort>Serial: COM1</CosmosDebugPort>
-        <Launch>None</Launch>
-        <Profile>ISO</Profile>
-        <Description>Creates a bootable ISO image which can be burned to a DVD. After running the selected project, an explorer window will open containing the ISO file. The ISO file can then be burned to a CD or DVD and used to boot a physical or virtual system.</Description>
+        <Launch>VMware</Launch>
+        <Profile>VMware</Profile>
+        <Description>Use VMware Player or Workstation to deploy and debug.</Description>
         <PxeInterface>192.168.0.8</PxeInterface>
     </PropertyGroup>
 
